trying to squash bugs

--- a/src/Styles/main.css
+++ b/src/Styles/main.css
@@ -34,10 +34,6 @@ a{
   margin-right: 20px; 
 }
 
-form{ 
-  float: right; 
-}
-
 img{ 
   width: 100%; 
   height: 100%; 
